<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mp_bringup</name>
  <version>0.0.0</version>
  <description>A Neobotix ROS2 package that is used for simulating mp series robots.</description>
  <maintainer email="adarshkaran01@gmail.com">adarsh-karan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>neo_gz_worlds</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <exec_depend>ros_gz</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
