<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mp_components</name>
  <version>0.0.0</version>
  <description>A Neobotix ROS2 package containing additional component xacros and GZ Simulation related xacros for mp series robots.</description>
  <maintainer email="adarshkaran01@gmail.com">adarsh-karan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ur_description</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>
  <exec_depend>ur_client_library</exec_depend>
  <exec_depend>ur_simulation_gz</exec_depend>
  <!-- <exec_depend>elite_description</exec_depend> -->
  <exec_depend>robotiq_description</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
