<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mp_rviz</name>
  <version>0.0.0</version>
  <description>A Neobotix ROS2 package to view robot description for all 4 mp series robots (mpo_700, mpo_500, mp_500, mp_400)</description>
  <maintainer email="adarshkaran01@gmail.com">adarsh-karan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>neo_mpo_700-2</exec_depend>
  <exec_depend>neo_mpo_500-2</exec_depend>
  <exec_depend>neo_mp_500-2</exec_depend>
  <exec_depend>neo_mp_400-2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
